<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutEqualizer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxEqualizer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:text="@string/equalizer_title" />

            <Spinner
                android:id="@+id/spinnerPreset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxReverb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:text="@string/reverb" />

            <Spinner
                android:id="@+id/spinnerReverb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxBassBoost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:text="@string/bass_boost" />

            <SeekBar
                android:id="@+id/seekBarBassBoost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:max="1000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/areaLoudness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/checkBoxLoudness"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:text="@string/loudness" />

            <SeekBar
                android:id="@+id/seekBarLoudness"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:max="1000" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>