<?xml version="1.0" encoding="utf-8"?><!--
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="@dimen/playback_controls_padding">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="@dimen/playback_controls_albumart_size"
        android:layout_height="@dimen/playback_controls_albumart_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/currently_playing_song"
        android:scaleType="centerCrop"
        tools:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin"
        android:layout_marginLeft="@dimen/playback_controls_albumart_horizontal_margin"
        android:layout_toStartOf="@+id/play_pause"
        android:layout_toLeftOf="@+id/play_pause"
        android:layout_toEndOf="@id/album_art"
        android:layout_toRightOf="@id/album_art"
        android:orientation="vertical">

        <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_artist"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_song"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/play_pause"
        android:padding="8dp"
        android:src="@drawable/ic_round_play_arrow_24"
        android:tint="@color/bt_accent"
        android:tintMode="src_in" />

</RelativeLayout>
