<?xml version="1.0" encoding="utf-8"?><!--
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:theme="@style/soundcrowdAppTheme">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_str"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/controls_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/fullscreen_toolbar_bg_gradient">

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_star_on" />

        <ImageView
            android:id="@+id/shazam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_toStartOf="@id/star"
            android:layout_toLeftOf="@id/star"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/shazam"
            android:tint="@android:color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/controls_layout"
        android:maxLines="10"
        android:shadowColor="@android:color/black"
        android:shadowRadius="20"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <com.tiefensuche.soundcrowd.waveform.WaveformView
        android:id="@+id/waveformView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/fullscreen_bg_gradient">

        <TextView
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line3"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="3"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/fullscreen_line_color" />

        <TextView
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line1"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/fullscreen_secondary_line_color" />

        <TextView
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/controllers"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/fullscreen_secondary_line_color" />

        <LinearLayout
            android:id="@+id/controllers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/startText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/text_view_margin"
                    android:layout_marginLeft="@dimen/text_view_margin"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toStartOf="@+id/endText"
                    android:layout_toLeftOf="@+id/endText"
                    android:layout_toEndOf="@+id/startText"
                    android:layout_toRightOf="@+id/startText" />

                <TextView
                    android:id="@+id/endText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/end_text_margin"
                    android:layout_marginRight="@dimen/end_text_margin"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <ImageView
                    android:id="@+id/prev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_prev"
                    android:src="@drawable/ic_skip_previous_white_48dp" />

                <ImageView
                    android:id="@+id/play_pause_fullscreen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/play_pause"
                    android:src="@drawable/ic_play_arrow_white_48dp" />

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_next"
                    android:src="@drawable/ic_skip_next_white_48dp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
